bugfix: loading spinner was behind settings

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,7 +37,7 @@ body {
     inset: 0;
     background-color: white;
     opacity: 0.8;
-    z-index: 1005;
+    z-index: 1901;
     display: grid;
     place-items: center;
     
